[package]
name = "dank-paste"
version = "0.2.4"
authors = ["Wilson Birney <wpb@360scada.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rand = "*"
multipart = "0.14"
serde = "*"
serde_json = "*"
serde_derive = "*"
dank_codegen = { path = "./codegen" }

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["handlebars_templates", "json"]
