[package]
name = "dank-paste"
version = "0.3.0"
authors = ["Wilson Birney <wpb@360scada.com>"]

[dependencies]
rocket = "0.4.0"
#rocket_codegen = "0.4.0"
rand = "*"
multipart = "0.14"
serde = "*"
serde_json = "*"
serde_derive = "*"
dank_codegen = { path = "./codegen" }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "json"]
